# deep-agent-study

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
customization/: main.ipynb
deep_research/: agent.py  research_agent.ipynb  utils.py
deep_research/research_agent/: prompts.py  tools.py
quick-start/: main.ipynb
quick_start/: main.ipynb
