[project]
name = "deep-agent-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.3.8",
    "jupyter>=1.1.1",
    "langchain-google-genai>=4.2.0",
    "langchain-openai>=1.1.7",
    "markdownify>=1.2.2",
    "python-dotenv>=1.2.1",
    "rich>=14.3.3",
    "tavily-python>=0.7.19",
]
